--- a/monitor/buoy-monitor/package.json
+++ b/monitor/buoy-monitor/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "gatsby": "^2.13.51",
+    "highcharts": "7.0.0",
     "leaflet": "^1.5.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-grid-layout": "^0.16.6",
+    "react-jsx-highcharts": "^3.6.1",
     "react-leaflet": "^2.4.0",
     "react-table": "^6.10.0",
     "react-tabs": "^3.0.0"
