--- a/monitor/buoy-monitor/package.json
+++ b/monitor/buoy-monitor/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
     "react-grid-layout": "^0.16.6",
     "react-jsx-highcharts": "^3.6.1",
     "react-leaflet": "^2.4.0",
