--- a/monitor/no-gatsby/monitor-buoy/package.json
+++ b/monitor/no-gatsby/monitor-buoy/package.json
@@ -4,16 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "highcharts": "^7.1.2",
+    "md5": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "highcharts": "7.0.0",
     "react-google-maps": "^9.4.5",
     "react-grid-layout": "^0.16.6",
     "react-jsx-highcharts": "^3.6.1",
+    "react-scripts": "3.0.1",
     "react-table": "^6.10.0",
     "react-tabs": "^3.0.0",
-    "prop-types": "^15.7.2"
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
