--- a/monitor/no-gatsby/monitor-buoy/.env.development
+++ b/monitor/no-gatsby/monitor-buoy/.env.development
@@ -1,1 +1,4 @@
-REACT_APP_TEST_DATA=[[1, 5], [2, 6], [3, 7], [4, 8], [5, 6], [6, 4]]
+REACT_APP_TEST_DATA_0=[[1, 5], [2, 6], [3, 7], [4, 8], [5, 6], [6, 4]]
+REACT_APP_TEST_DATA_1=[[1, 7], [2, 6], [3, 5], [4, 4], [5, 6], [6, 8]]
+REACT_APP_TEST_DATA_2=[[1, 6], [2, 8], [3, 7], [4, 4], [5, 3], [6, 2]]
+REACT_APP_TEST_DATA_3=[[1, 7], [2, 3], [3, 3], [4, 4], [5, 4], [6, 6]]
