--- a/monitor/no-gatsby/monitor-buoy/package.json
+++ b/monitor/no-gatsby/monitor-buoy/package.json
@@ -11,10 +11,13 @@
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-grid-layout": "^0.16.6",
+    "react-icons": "^3.7.0",
     "react-jsx-highcharts": "^3.6.1",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "react-table": "^6.10.0",
     "react-tabs": "^3.0.0",
+    "react-toggle-button": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
